# local_jarvis_wMCP

./: .env  .env.example  .gitignore  LICENSE  README  README.md  config.yaml  openAI_multi_agents.md  pyproject.toml
src/: main.py
src/core/: docket_orchestrator.py  multi_agent.py  workspace_agent.py
src/local_tools/: __init__.py  file_system_tool.py  regnavigator_tool.py  web_search_tool.py
src/local_tools/lib/regnavigator_lite/: core.py
src/ui/: main_window.py  utils.py
src/utils/: secure_store.py
