[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "local-jarvis-wmcp"
version = "1.0.0"
authors = [
  { name="Luis Macias-Navarro", email="luis@lmntstrategy.com" },
]
description = "A desktop agent for Google Workspace using MCP and OpenAI Agents SDK."
readme = "README.md"
requires-python = ">=3.11, <3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

dependencies = [
    "PyQt6",
    "qasync",
    "openai-agents",
    "python-dotenv",
    "keyring",
    "pyperclip",
    "Flask",
    "werkzeug",
    "requests",
    "duckduckgo-search",
    "pandas",
    "httpx",
    "pdfplumber",
    "reportlab",
    "tenacity",
    "google-generativeai",
    "pydantic",
    "Markdown",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "PyYAML",
    # Dependencies for arxiv-mcp-server
    "arxiv-mcp-server @ git+https://github.com/blazickjp/arxiv-mcp-server.git",
    "arxiv>=2.1.0",
    "python-dateutil>=2.8.2",
    "mcp>=1.2.0",
    "pymupdf4llm>=0.0.17",
    "aiohttp>=3.9.1",
    "pydantic-settings>=2.1.0",
    "aiofiles>=23.2.1",
    "uvicorn>=0.30.0",
    "sse-starlette>=1.8.2",
    "anyio>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-qt",
    "pyinstaller",
]

[project.scripts]
local-jarvis = "src.main:main"

[tool.setuptools]
# This line is important for packaging. If your src folder contains other packages,
# you might need to list them or use find:. For your current structure, this is fine.
packages = ["src"]